[package]
name = "syunit"
version = "0.1.0"
edition = "2021"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
description = "A small library that contains some basic units to help structuring kinematics and robotic programming in rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = [ "derive" ] }
